B23: add endpoint to list movements
